--- a/frontend/kitchen/public/index.html
+++ b/frontend/kitchen/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DMA - Kitchen</title>
+    <link rel="shortcut icon" href="#">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
