Fix unauthorized icon error

--- a/frontend/restaurant/public/index.html
+++ b/frontend/restaurant/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>DMA - Restaurant</title>
+    <link rel="shortcut icon" href="#">
   </head>
   <body>
     <div id="root"></div>
