Update packages and Index
- Added react popup and react color
- Fix Index icon not found error
- Clean up and update Index css

--- a/frontend/admin-panel/public/index.html
+++ b/frontend/admin-panel/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>DMA - Admin Panel</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <title>DMA - Admin Panel</title>
+  <link rel="shortcut icon" href="#">
+</head>
+<body>
+<div id="root"></div>
+</body>
 </html>
